--- a/.gitlab/.gitlab-webide.yml
+++ b/.gitlab/.gitlab-webide.yml
@@ -1,11 +1,11 @@
 terminal:
   image: postgres:12
-  script:
-    - apt-get update && apt-get install -y make gcc git postgresql-server-dev-12 pgxnclient
-    - pgxn install ddlx
-    - make extension
-    - make install
-    - echo "shared_preload_libraries = 'anon'" >> /var/lib/postgresql/data/postgresql.conf
+#  script:
+#    - apt-get update && apt-get install -y make gcc git postgresql-server-dev-12 pgxnclient
+#    - pgxn install ddlx
+#    - make extension
+#    - make install
+#    - echo "shared_preload_libraries = 'anon'" >> /var/lib/postgresql/data/postgresql.conf
 #    - gosu postgres pg_ctl restart
   variables:
     PGDATA: /var/lib/postgresql/data
