--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -212,6 +212,24 @@ test_pgxn:
     - pgxn install postgresql_anonymizer
   when: manual
 
+# test install 
+test_pgxn_ubuntu_pg95:
+  stage: deploy
+  image: ubuntu:bionic
+  script:
+    - apt-get update && apt-get install -y make gcc postgresql-common pgxnclient
+    - sh /usr/share/postgresql-common/pgdg/apt.postgresql.org.sh
+    - apt-get update && apt-get install -y postgresql-server-dev-9.5
+    - pg_config --sharedir
+    - pgxn install --pg_config /usr/lib/postgresql/9.5/bin/pg_config ddlx
+    - pgxn install --pg_config /usr/lib/postgresql/9.5/bin/pg_config postgresql_anonymizer
+    - psql -c "CREATE EXTENSION ddlx;"
+    - psql -c "CREATE TEMPORARY TABLE pg_config AS SELECT 'SHAREDIR'::TEXT AS name, '/usr/share/postgresql/9.5'::TEXT AS setting;"
+    - psql -c "CREATE EXTENSION IF NOT EXISTS tsm_system_rows;"
+    - psql -c "CREATE EXTENSION IF NOT EXISTS anon;"
+    - psql -c "SELECT anon.load();"
+  when: manual
+  
 test_yum_centos7_pg12:
   stage: deploy
   image: centos:7
