--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -221,16 +221,20 @@ test_pgxn_ubuntu_pg95:
   before_script:
     - echo "disable the before_script"
   script:
-    - apt-get update && apt-get install -y make gcc postgresql-common pgxnclient
-    - sh /usr/share/postgresql-common/pgdg/apt.postgresql.org.sh -y -v 9.5
-    - apt-get update && apt-get install -y postgresql-server-dev-9.5
+    - apt-get update && apt-get install -y make gcc postgresql-common pgxnclient gnupg ca-cacert
+    - yes '' | sh /usr/share/postgresql-common/pgdg/apt.postgresql.org.sh bionic
+    - apt-get install -y postgres-9.5 postgres-9.5-contrib postgresql-server-dev-9.5
+    - export PGDATA=/var/lib/postgresql/data
+    - export PGUSER=postgres
+    - su postgres -c /usr/lib/postgresql/9.5/bin/initdb
+    - su postgres -c "/usr/lib/postgresql/9.5/bin/pg_ctl start" &
     - pg_config --sharedir
     - pgxn install --pg_config /usr/lib/postgresql/9.5/bin/pg_config ddlx
     - pgxn install --pg_config /usr/lib/postgresql/9.5/bin/pg_config postgresql_anonymizer
     - psql -c "CREATE EXTENSION ddlx;"
-    - psql -c "CREATE TEMPORARY TABLE pg_config AS SELECT 'SHAREDIR'::TEXT AS name, '/usr/share/postgresql/9.5'::TEXT AS setting;"
-    - psql -c "CREATE EXTENSION IF NOT EXISTS tsm_system_rows;"
-    - psql -c "CREATE EXTENSION IF NOT EXISTS anon;"
+    - psql -c "CREATE EXTENSION tsm_system_rows;"
+    - psql -c "CREATE TEMPORARY TABLE pg_config AS SELECT 'SHAREDIR'::TEXT AS name, '/usr/share/postgresql/9.5'::TEXT AS setting;CREATE EXTENSION anon;"
+    - psql -c "ALTER DATABASE postgres SET session_preload_libraries='anon'"
     - psql -c "SELECT anon.load();"
   when: manual
   
